@startuml
skinparam classAttributeIconSize 0

class AttendanceCommand {
  - nameRaw : String
  - dateRaw : String
  - scoreRaw : String
  + execute(model: Model) : CommandResult
}
class AttendanceCommandParser {
  + parse(args: String) : AttendanceCommand
}
interface Model {
  + getAddressBook() : ReadOnlyAddressBook
  + getAttendanceIndex() : AttendanceIndex
  + updateFilteredPersonList(pred) : void
  + hasPersonName(name: String) : boolean
}
class ModelManager
class ReadOnlyAddressBook {
  + getPersonList() : List<Person>
}
class Person {
  - name : Name
  - phone : Phone
  - lessonTime : LessonTime
  - participation : ParticipationHistory
  + getParticipation() : ParticipationHistory
}
class ParticipationHistory {
  + add(r: ParticipationRecord) : void
  + mostRecent() : ParticipationRecord
  + asListPaddedToFive() : List<ParticipationRecord>
}
class ParticipationRecord {
  - date : LocalDate
  - score : int
  + getDate() : LocalDate
  + getScore() : int
}
class AttendanceIndex {
  + setCurrentUiDate(date: LocalDate) : void
  + getCurrentUiDate() : LocalDate
}
class UiAttendanceAccess {
  + install(getter, dateSupplier) : void
}
class PersonCard {
  - renderParticipation(h: ParticipationHistory) : void
}

ModelManager -|> Model
ReadOnlyAddressBook o-- "0..*" Person
Person *-- "1" ParticipationHistory
ParticipationHistory *-- "0..5" ParticipationRecord
Model --> "1" AttendanceIndex
Model --> "1" ReadOnlyAddressBook
AttendanceCommand ..> Model
AttendanceCommand ..> ParticipationRecord
AttendanceCommand ..> UiAttendanceAccess
AttendanceCommandParser ..> AttendanceCommand
PersonCard ..> ParticipationHistory
PersonCard ..> ParticipationRecord
@enduml
